--- a/horarios.html
+++ b/horarios.html
@@ -48,156 +48,156 @@
   <h2 class="section-title">Horarios</h2>
 
   <section class="tabla-horarios">
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>LUNES</th>
-          <th>MARTES</th>
-          <th>MIERCOLES</th>
-          <th>JUEVES</th>
-          <th>VIERNES</th>
-          <th>SABADO</th>
-          <th>DOMINGO</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><input type="text" placeholder="7:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="8:00"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="GIMNASTICOS"></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="9:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="10:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="11:00"></td>
-          <td></td><td></td><td></td><td></td><td></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="12:00"></td>
-          <td></td><td></td><td></td><td></td><td></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="13:00"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="14:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="15:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="16:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="17:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="18:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="19:00"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="20:00"></td>
-          <td><input type="text" placeholder="GIMNASTICOS"></td>
-          <td><input type="text" placeholder="HYROX"></td>
-          <td><input type="text" placeholder="WOD"></td>
-          <td><input type="text" placeholder="HYROX"></td>
-          <td><input type="text" placeholder="HALTEROFILIA"></td>
-          <td></td><td></td>
-        </tr>
-        <tr>
-          <td><input type="text" placeholder="21:00"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td><input type="text" placeholder="OPEN GYM"></td>
-          <td></td><td></td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+  <table>
+    <thead>
+      <tr>
+        <th></th>
+        <th>LUNES</th>
+        <th>MARTES</th>
+        <th>MIERCOLES</th>
+        <th>JUEVES</th>
+        <th>VIERNES</th>
+        <th>SABADO</th>
+        <th>DOMINGO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><span>7:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><span>8:00</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>GIMNASTICOS</span></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><span>9:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+      </tr>
+      <tr>
+        <td><span>10:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+      </tr>
+      <tr>
+        <td><span>11:00</span></td>
+        <td></td><td></td><td></td><td></td><td></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+      </tr>
+      <tr>
+        <td><span>12:00</span></td>
+        <td></td><td></td><td></td><td></td><td></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+      </tr>
+      <tr>
+        <td><span>13:00</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>14:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>15:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>16:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>17:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>18:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>19:00</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td><span>WOD</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>20:00</span></td>
+        <td><span>GIMNASTICOS</span></td>
+        <td><span>HYROX</span></td>
+        <td><span>WOD</span></td>
+        <td><span>HYROX</span></td>
+        <td><span>HALTEROFILIA</span></td>
+        <td></td><td></td>
+      </tr>
+      <tr>
+        <td><span>21:00</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td><span>OPEN GYM</span></td>
+        <td></td><td></td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
   <section class="tarifas-grid">
     <article class="tarifa">
