--- a/horarios.html
+++ b/horarios.html
@@ -63,136 +63,136 @@
     </thead>
     <tbody>
       <tr>
-        <td><span>7:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="7:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td><span>8:00</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>GIMNASTICOS</span></td>
+        <td><input type="text" placeholder="8:00" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="GIMNASTICOS" readonly></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td><span>9:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
+        <td><input type="text" placeholder="9:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
       </tr>
       <tr>
-        <td><span>10:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="10:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
       </tr>
       <tr>
-        <td><span>11:00</span></td>
+        <td><input type="text" placeholder="11:00" readonly></td>
         <td></td><td></td><td></td><td></td><td></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
       </tr>
       <tr>
-        <td><span>12:00</span></td>
+        <td><input type="text" placeholder="12:00" readonly></td>
         <td></td><td></td><td></td><td></td><td></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
       </tr>
       <tr>
-        <td><span>13:00</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
+        <td><input type="text" placeholder="13:00" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>14:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="14:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>15:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="15:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>16:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="16:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>17:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="17:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>18:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="18:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>19:00</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
-        <td><span>WOD</span></td>
+        <td><input type="text" placeholder="19:00" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>20:00</span></td>
-        <td><span>GIMNASTICOS</span></td>
-        <td><span>HYROX</span></td>
-        <td><span>WOD</span></td>
-        <td><span>HYROX</span></td>
-        <td><span>HALTEROFILIA</span></td>
+        <td><input type="text" placeholder="20:00" readonly></td>
+        <td><input type="text" placeholder="GIMNASTICOS" readonly></td>
+        <td><input type="text" placeholder="HYROX" readonly></td>
+        <td><input type="text" placeholder="WOD" readonly></td>
+        <td><input type="text" placeholder="HYROX" readonly></td>
+        <td><input type="text" placeholder="HALTEROFILIA" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
-        <td><span>21:00</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
-        <td><span>OPEN GYM</span></td>
+        <td><input type="text" placeholder="21:00" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN GYM" readonly></td>
         <td></td><td></td>
       </tr>
     </tbody>
