--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <article class="card">
         <h4>Horarios y Tarifas</h4>
         <p>Nuestras clases.</p>
-        <p><a href="horarios y tarifas.html">Ver detalle</a></p>
+        <p><a href="horarios.html">Ver detalle</a></p>
       </article>
     </section>
   </section>
