--- a/horarios.html
+++ b/horarios.html
@@ -65,32 +65,32 @@
       <tr>
         <td><input type="text" placeholder="7:00" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="8:00" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="GIMNASTICOS" readonly></td>
+        <td><input type="text" placeholder="GIM." readonly></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="9:00" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="10:00" readonly></td>
@@ -105,30 +105,30 @@
       <tr>
         <td><input type="text" placeholder="11:00" readonly></td>
         <td></td><td></td><td></td><td></td><td></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="12:00" readonly></td>
         <td></td><td></td><td></td><td></td><td></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="13:00" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="14:00" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
@@ -153,9 +153,9 @@
       <tr>
         <td><input type="text" placeholder="17:00" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
         <td></td><td></td>
       </tr>
@@ -179,20 +179,20 @@
       </tr>
       <tr>
         <td><input type="text" placeholder="20:00" readonly></td>
-        <td><input type="text" placeholder="GIMNASTICOS" readonly></td>
+        <td><input type="text" placeholder="GIM." readonly></td>
         <td><input type="text" placeholder="HYROX" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
         <td><input type="text" placeholder="HYROX" readonly></td>
-        <td><input type="text" placeholder="HALTEROFILIA" readonly></td>
+        <td><input type="text" placeholder="HALT." readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
         <td><input type="text" placeholder="21:00" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
-        <td><input type="text" placeholder="OPEN GYM" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
+        <td><input type="text" placeholder="OPEN" readonly></td>
         <td></td><td></td>
       </tr>
     </tbody>
