--- a/horarios.html
+++ b/horarios.html
@@ -78,7 +78,7 @@
         <td><input type="text" placeholder="WOD" readonly></td>
         <td><input type="text" placeholder="OPEN" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="GIM." readonly></td>
+        <td><input type="text" placeholder="GIM." title="Gimnásticos"readonly></td>
         <td></td>
         <td></td>
       </tr>
@@ -179,11 +179,11 @@
       </tr>
       <tr>
         <td><input type="text" placeholder="20:00" readonly></td>
-        <td><input type="text" placeholder="GIM." readonly></td>
+        <td><input type="text" placeholder="GIM." title="Gimnásticos"readonly></td>
         <td><input type="text" placeholder="HYROX" readonly></td>
         <td><input type="text" placeholder="WOD" readonly></td>
         <td><input type="text" placeholder="HYROX" readonly></td>
-        <td><input type="text" placeholder="HALT." readonly></td>
+        <td><input type="text" placeholder="HALT." title="Halterofilia"readonly></td>
         <td></td><td></td>
       </tr>
       <tr>
