--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <p>Esfuerzo - Constancia - Superación</p>
       </section>
 
+      <!-- Botón hamburguesa solo para móviles -->
+    <button class="menu-toggle" aria-label="Abrir menú">
+      &#9776; <!-- icono de tres rayas -->
+    </button>
+
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
       <ul>
         <li><a href="index.html" class="active">Inicio</a></li>
