--- a/wod.html
+++ b/wod.html
@@ -1,39 +1,42 @@
-<!--
-  Módulo: Desarrollo Web - LMSGI02
-  Tarea: Tarea evaluativa - Sitio web "The Box" (Versión entregable)
-  UD: Desarrollo web con HTML5 y CSS3
-  Autor: Saioa Echevarria Ballesteros
-  Fecha: 20/10/2025
--->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WOD de la semana - The Box</title>
-  <meta name="description" content="Tipos de entrenamiento en The Box">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>Crossfit The Box - Inicio</title>
+  <meta name="description" content="Bienvenido a Crossfit The Box - CrossFit. Reserva tu clase de prueba.">
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <!-- ================= HEADER ================= -->
-<!-- Header principal con logo, nombre y menú de navegación del sitio -->
-<header class="site-header">
+<!-- Header principal de la web
+       Contiene:
+       - Logo de la marca
+       - Texto de marca con título y eslogan
+       - Menú de navegación principal con enlaces a todas las secciones de la web
+       - Diseño sticky para permanecer visible al hacer scroll -->
+<header class="site-header" role="banner">
   <section class="header-inner container">
     <img src="images/logo.png" alt="Logo The Box" class="logo">
-    <section class="brand-text">
-      <h1>Crossfit The Box</h1>
+      <section class="brand-text">
+       <h1>Crossfit The Box</h1>
       <p>Esfuerzo - Constancia - Superación</p>
-    </section>
+      </section>
+
+      <!-- Botón hamburguesa solo para móviles -->
+    <button class="menu-toggle" aria-label="Abrir menú">
+      &#9776; <!-- icono de tres rayas -->
+    </button>
+
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
       <ul>
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index.html" class="active">Inicio</a></li>
         <li><a href="noticias.html">Noticias</a></li>
         <li><a href="entrenamientos.html">Entrenamientos</a></li>
-        <li><a href="wod.html" class="active">WOD de la semana</a></li>
+        <li><a href="wod.html">WOD de la semana</a></li>
         <li><a href="horarios.html">Horarios y Tarifas</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
