--- a/wod.html
+++ b/wod.html
@@ -33,10 +33,10 @@
 
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
       <ul>
-        <li><a href="index.html" class="active">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="noticias.html">Noticias</a></li>
         <li><a href="entrenamientos.html">Entrenamientos</a></li>
-        <li><a href="wod.html">WOD de la semana</a></li>
+        <li><a href="wod.html" class="active">WOD de la semana</a></li>
         <li><a href="horarios.html">Horarios y Tarifas</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
