--- a/contacto.html
+++ b/contacto.html
@@ -33,12 +33,12 @@
 
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
       <ul>
-        <li><a href="index.html" class="active">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="noticias.html">Noticias</a></li>
         <li><a href="entrenamientos.html">Entrenamientos</a></li>
         <li><a href="wod.html">WOD de la semana</a></li>
         <li><a href="horarios.html">Horarios y Tarifas</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="contacto.html" class="active">Contacto</a></li>
       </ul>
     </nav>
   </section>
