--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <header class="site-header" role="banner">
   <section class="header-inner container">
     <img src="images/logo.png" alt="Logo The Box" class="logo">
-      <section class="brand-text">
-       <h1>Crossfit The Box</h1>
+    <section class="brand-text">
+      <h1>Crossfit The Box</h1>
       <p>Esfuerzo - Constancia - Superación</p>
-      </section>
+    </section>
 
-      <!-- Botón hamburguesa solo para móviles -->
+    <!-- Botón hamburguesa solo para móviles -->
     <button class="menu-toggle" aria-label="Abrir menú">
-      &#9776; <!-- icono de tres rayas -->
+      &#9776;
     </button>
 
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
@@ -169,5 +169,6 @@
   </section>
 </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
