--- a/noticias.html
+++ b/noticias.html
@@ -33,8 +33,8 @@
 
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
       <ul>
-        <li><a href="index.html" class="active">Inicio</a></li>
-        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="noticias.html" class="active">Noticias</a></li>
         <li><a href="entrenamientos.html">Entrenamientos</a></li>
         <li><a href="wod.html">WOD de la semana</a></li>
         <li><a href="horarios.html">Horarios y Tarifas</a></li>
