--- a/horarios.html
+++ b/horarios.html
@@ -55,151 +55,169 @@
     <thead>
       <tr>
         <th></th>
-        <th>LUNES</th>
-        <th>MARTES</th>
-        <th>MIERCOLES</th>
-        <th>JUEVES</th>
-        <th>VIERNES</th>
-        <th>SABADO</th>
-        <th>DOMINGO</th>
+        <th scope="col">LUNES</th>
+        <th scope="col">MARTES</th>
+        <th scope="col">MIÉRCOLES</th>
+        <th scope="col">JUEVES</th>
+        <th scope="col">VIERNES</th>
+        <th scope="col">SÁBADO</th>
+        <th scope="col">DOMINGO</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td><input type="text" placeholder="7:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
+        <th scope="row">7:00</th>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="8:00" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="GIM." title="Gimnásticos"readonly></td>
+        <th scope="row">8:00</th>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td title="Gimnásticos">GIM.</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="9:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
+        <th scope="row">9:00</th>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>OPEN</td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="10:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
+        <th scope="row">10:00</th>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="11:00" readonly></td>
-        <td></td><td></td><td></td><td></td><td></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
+        <th scope="row">11:00</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>OPEN</td>
+        <td>OPEN</td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="12:00" readonly></td>
-        <td></td><td></td><td></td><td></td><td></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
+        <th scope="row">12:00</th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>OPEN</td>
+        <td>OPEN</td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="13:00" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td></td><td></td>
+        <th scope="row">13:00</th>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="14:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">14:00</th>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="15:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">15:00</th>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="16:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">16:00</th>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="17:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">17:00</th>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td>OPEN</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="18:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">18:00</th>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="19:00" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td></td><td></td>
+        <th scope="row">19:00</th>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td>WOD</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="20:00" readonly></td>
-        <td><input type="text" placeholder="GIM." title="Gimnásticos"readonly></td>
-        <td><input type="text" placeholder="HYROX" readonly></td>
-        <td><input type="text" placeholder="WOD" readonly></td>
-        <td><input type="text" placeholder="HYROX" readonly></td>
-        <td><input type="text" placeholder="HALT." title="Halterofilia"readonly></td>
-        <td></td><td></td>
+        <th scope="row">20:00</th>
+        <td title="Gimnásticos">GIM.</td>
+        <td>HYROX</td>
+        <td>WOD</td>
+        <td>HYROX</td>
+        <td title="Halterofilia">HALT.</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
-        <td><input type="text" placeholder="21:00" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td><input type="text" placeholder="OPEN" readonly></td>
-        <td></td><td></td>
+        <th scope="row">21:00</th>
+        <td>OPEN</td>
+        <td>OPEN</td>
+        <td>OPEN</td>
+        <td>OPEN</td>
+        <td>OPEN</td>
+        <td></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
+
 </section>
 
   <section class="tarifas-grid">
