--- a/wod.html
+++ b/wod.html
@@ -69,7 +69,7 @@
       <section class="video">
         <h3 class="video-titulo"></h3>
         <video autoplay muted controls loop width="100%" height="100%">
-          <source src="videos/murph.mp4" type="video/mp4">
+          <source src="videos/Murph.webm" type="video/webm">
           Tu navegador no soporta la reproducción de video.
         </video>
       </section>
