--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>Esfuerzo - Constancia - Superación</p>
     </section>
 
-    <!-- Botón hamburguesa solo para móviles -->
+    <!-- Botón para móviles y tablets -->
     <button class="menu-toggle" aria-label="Abrir menú">
       &#9776;
     </button>
