--- a/entrenamientos.html
+++ b/entrenamientos.html
@@ -26,9 +26,9 @@
       <p>Esfuerzo - Constancia - Superación</p>
       </section>
 
-      <!-- Botón hamburguesa solo para móviles -->
+    <!-- Botón para móviles y tablets -->
     <button class="menu-toggle" aria-label="Abrir menú">
-      &#9776; <!-- icono de tres rayas -->
+      &#9776;
     </button>
 
     <nav class="main-nav" role="navigation" aria-label="Navegación principal">
