--- a/entrenamientos.html
+++ b/entrenamientos.html
@@ -1,3 +1,11 @@
+<!-- 
+Autor: Saioa Echevarria Ballesteros
+Asignatura: LMGSI
+UD: UD 2
+Tarea: Sitio Web
+Documento de Reflexión: https://drive.google.com/file/d/1c3WF-h-CHO0jnjwFMgxkOrCckZlwYSOg/view?usp=drive_link
+-->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
